--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <select class="breed-select is-hidden"></select>
+    <button class="show-dogs is-hidden">Show dogs</button>
     <p class="loader">Loading data, please wait...</p>
-    <p class="error is-hidden">
-      s Oops! Something went wrong! Try reloading the page!
-    </p>
     <div class="cat-info"></div>
 
     <script src="./js/index.js" type="module"></script>
