--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,39 @@
   <body>
     <select class="breed-select is-hidden"></select>
     <button class="show-dogs is-hidden">Show dogs</button>
-    <p class="loader">Loading data, please wait...</p>
+    <!-- <p class="loader">Loading data, please wait...</p> -->
     <div class="cat-info"></div>
+
+    <div class="backdrop">
+      <div class="modal">
+        <img
+          src="images/cat-hypnosis.png"
+          alt="cat-hypnosis"
+          class="img-cat-hypnosis"
+        />
+        <h2 class="want-dogs-title">
+          YOU DON'T WANT TO LOOK AT THE DOGS. WANT TO LOOK AT THE CATS.
+        </h2>
+
+        <div class="buttons">
+          <button id="no-btn" class="dogs-btn">I love dogs.</button>
+          <button id="yes-btn" class="dogs-btn">I love cats.</button>
+        </div>
+        <div class="popup" id="popup">
+          <p>Aww, thank you!</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="loading-animation" class="heading large-text">
+      <p>l</p>
+      <p>o</p>
+      <p>a</p>
+      <p>d</p>
+      <p>i</p>
+      <p>n</p>
+      <p>g</p>
+    </div>
 
     <script src="./js/index.js" type="module"></script>
     <!-- <script src="./js/cat-api.js" type="module"></script> -->
