--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <select class="breed-select is-hidden"></select>
+    <div class="select-wrapper">
+      <select class="breed-select is-hidden"></select>
+      <!-- <svg class="icon" width="32" height="32" viewBox="0 0 32 32">
+        <path
+          d="M27.414 19.414l-10 10c-0.781 0.781-2.047 0.781-2.828 0l-10-10c-0.781-0.781-0.781-2.047 0-2.828s2.047-0.781 2.828 0l6.586 6.586v-19.172c0-1.105 0.895-2 2-2s2 0.895 2 2v19.172l6.586-6.586c0.39-0.39 0.902-0.586 1.414-0.586s1.024 0.195 1.414 0.586c0.781 0.781 0.781 2.047 0 2.828z"
+        ></path>
+      </svg> -->
+    </div>
     <button class="show-dogs is-hidden">Show dogs</button>
     <!-- <p class="loader">Loading data, please wait...</p> -->
     <div class="cat-info"></div>
